[package]
name = "rayon-tlsctx"
version = "0.1.1"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "thread local contexts for rayon loops"
documentation = "https://docs.rs/rayon-tlsctx"
readme = "README.md"
repository = "https://github.com/h33p/rayon-tlsctx"
license = "MIT"
keywords = [ "rayon", "tls", "threads" ]
categories = [ "caching", "concurrency" ]

[dependencies]
rayon = "1.5"

[dev-dependencies]
rand = "0.8"
